gitops/workloads/semaphore/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: semaphore
  namespace: semaphore
spec:
  selector: { app: semaphore }
  ports:
    - port: 3000
      targetPort: 3000
